--- a/Audio.Asio/Audio.Asio.vcxproj
+++ b/Audio.Asio/Audio.Asio.vcxproj
@@ -75,23 +75,23 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ExecutablePath>$(ExecutablePath)</ExecutablePath>
-    <IncludePath>D:\Gamer I5\Documents\Projects\Audio.Foundation;D:\Gamer I5\Documents\Projects\ASIOSDK2\common;$(IncludePath)</IncludePath>
+    <IncludePath>D:\Gamer I5\Documents\Projects\Audio\Audio.Foundation.Unmanaged;D:\Gamer I5\Documents\Projects\ASIOSDK2\common;$(IncludePath)</IncludePath>
     <OutDir>$(ProjectDir)bin\$(Configuration)\$(Platform)\</OutDir>
     <IntDir>$(ProjectDir)obj\$(Configuration)\$(Platform)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ExecutablePath>$(ExecutablePath)</ExecutablePath>
-    <IncludePath>D:\Gamer I5\Documents\Projects\Audio.Foundation;D:\Gamer I5\Documents\Projects\ASIOSDK2\common;$(IncludePath)</IncludePath>
+    <IncludePath>D:\Gamer I5\Documents\Projects\Audio\Audio.Foundation.Unmanaged;D:\Gamer I5\Documents\Projects\ASIOSDK2\common;$(IncludePath)</IncludePath>
     <OutDir>$(ProjectDir)bin\$(Configuration)\$(Platform)\</OutDir>
     <IntDir>$(ProjectDir)obj\$(Configuration)\$(Platform)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>D:\Gamer I5\Documents\Projects\Audio.Foundation;D:\Gamer I5\Documents\Projects\ASIOSDK2\common;$(IncludePath)</IncludePath>
+    <IncludePath>D:\Gamer I5\Documents\Projects\Audio\Audio.Foundation.Unmanaged;D:\Gamer I5\Documents\Projects\ASIOSDK2\common;$(IncludePath)</IncludePath>
     <OutDir>$(ProjectDir)bin\$(Configuration)\$(Platform)\</OutDir>
     <IntDir>$(ProjectDir)obj\$(Configuration)\$(Platform)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <IncludePath>D:\Gamer I5\Documents\Projects\Audio.Foundation;D:\Gamer I5\Documents\Projects\ASIOSDK2\common;$(IncludePath)</IncludePath>
+    <IncludePath>D:\Gamer I5\Documents\Projects\Audio\Audio.Foundation.Unmanaged;D:\Gamer I5\Documents\Projects\ASIOSDK2\common;$(IncludePath)</IncludePath>
     <OutDir>$(ProjectDir)bin\$(Configuration)\$(Platform)\</OutDir>
     <IntDir>$(ProjectDir)obj\$(Configuration)\$(Platform)\</IntDir>
   </PropertyGroup>
