--- a/Audio.Foundation/Audio.Foundation.vcxproj.filters
+++ b/Audio.Foundation/Audio.Foundation.vcxproj.filters
@@ -66,6 +66,12 @@
     <ClInclude Include="StreamProvider.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="AudioInputBase.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="AudioOutputBase.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssemblyInfo.cpp">
@@ -108,6 +114,15 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="SampleConversion.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ReadOnlyCollectionOfInt.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="AudioInputBase.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="AudioOutputBase.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
