Now we can build the entire solution. Hooray.

--- a/Test/Test.Audio.Asio/Test.Audio.Asio.csproj
+++ b/Test/Test.Audio.Asio/Test.Audio.Asio.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Audio.Asio\Audio.Asio.vcxproj" />
+    <ProjectReference Include="..\..\Audio.Foundation\Audio.Foundation.vcxproj" />
   </ItemGroup>
 
   <ItemGroup>
