code maintenance and docs

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ obj/
 bin/
 Audio.Asio/TestResults/
 /Test/Test.Audio.Asio/Audio.Foundation.Unmanaged.dll
+/Docs/~$Track Status Flow Clash.drawio.dtmp
