Audio.Foundation.Unamanged with smart pointers (_com_ptr)

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ Audio.Asio/TestResults/
 /Test/Test.Audio.Asio/Audio.Foundation.Unmanaged.dll
 /Docs/~$Track Status Flow Clash.drawio.dtmp
 /Docs/.$Audio.Asio.Buffers.drawio.bkp
+/x64/Debug
