--- a/Audio.Foundation/Audio.Foundation.vcxproj.filters
+++ b/Audio.Foundation/Audio.Foundation.vcxproj.filters
@@ -72,6 +72,18 @@
     <ClInclude Include="AudioOutputBase.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="IAudioTarget.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="IAudioSource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="AudioTargetBase.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="AudioSourceBase.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssemblyInfo.cpp">
@@ -123,6 +135,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="AudioOutputBase.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="AudioTargetBase.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="AudioSourceBase.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
