--- a/Audio.Foundation/Audio.Foundation.vcxproj.filters
+++ b/Audio.Foundation/Audio.Foundation.vcxproj.filters
@@ -84,6 +84,9 @@
     <ClInclude Include="AudioSourceBase.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="IAudioBuffer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="AssemblyInfo.cpp">
