--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ Audio.Asio/TestResults/
 /Docs/~$Track Status Flow Clash.drawio.dtmp
 /Docs/.$Audio.Asio.Buffers.drawio.bkp
 /x64/Debug
+/Audio.Asio.Unmanaged/int/Debug/x64
