--- a/Audio.Asio.Unmanaged/Audio.Asio.Unmanaged.vcxproj
+++ b/Audio.Asio.Unmanaged/Audio.Asio.Unmanaged.vcxproj
@@ -11,26 +11,24 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <VCProjectVersion>17.0</VCProjectVersion>
-    <ProjectGuid>{7596112D-E519-4689-99DA-A69C03B7DBF7}</ProjectGuid>
-    <Keyword>NetCoreCProj</Keyword>
-    <RootNamespace>AudioWasapi</RootNamespace>
+    <VCProjectVersion>16.0</VCProjectVersion>
+    <Keyword>Win32Proj</Keyword>
+    <ProjectGuid>{47dbe2cb-65c6-48d1-b93e-2b33fecc5c43}</ProjectGuid>
+    <RootNamespace>AudioAsioUnmanaged</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
-    <CLRSupport>NetCore</CLRSupport>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
-    <CLRSupport>NetCore</CLRSupport>
+    <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
@@ -46,59 +44,83 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <IncludePath>D:\Gamer I5\Documents\Projects\Audio\Audio.Asio.Unmanaged;D:\Gamer I5\Documents\Projects\Audio\Audio.Foundation.Unmanaged;D:\Gamer I5\Documents\Projects\ASIOSDK2\common;$(VC_IncludePath);$(WindowsSDK_IncludePath)</IncludePath>
     <OutDir>$(ProjectDir)bin\$(Configuration)\$(Platform)\</OutDir>
-    <IntDir>$(ProjectDir)obj\$(Configuration)\$(Platform)\</IntDir>
-    <IncludePath>D:\Gamer I5\Documents\Projects\Audio\Audio.Foundation.Unmanaged;$(IncludePath)</IncludePath>
+    <IntDir>$(ProjectDir)int\$(Configuration)\$(Platform)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <IncludePath>D:\Gamer I5\Documents\Projects\Audio\Audio.Asio.Unmanaged;D:\Gamer I5\Documents\Projects\Audio\Audio.Foundation.Unmanaged;D:\Gamer I5\Documents\Projects\ASIOSDK2\common;$(VC_IncludePath);$(WindowsSDK_IncludePath)</IncludePath>
     <OutDir>$(ProjectDir)bin\$(Configuration)\$(Platform)\</OutDir>
-    <IntDir>$(ProjectDir)obj\$(Configuration)\$(Platform)\</IntDir>
-    <IncludePath>D:\Gamer I5\Documents\Projects\Audio\Audio.Foundation.Unmanaged;$(IncludePath)</IncludePath>
+    <IntDir>$(ProjectDir)int\$(Configuration)\$(Platform)\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
+      <WarningLevel>Level3</WarningLevel>
+      <SDLCheck>true</SDLCheck>
+      <PreprocessorDefinitions>AUDIOASIOUNMANAGED_EXPORTS;_DEBUG;AUDIOASIOUNMANAGED_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <WarningLevel>Level3</WarningLevel>
-      <PreprocessorDefinitions>_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>ole32.lib</AdditionalDependencies>
+      <SubSystem>Windows</SubSystem>
+      <GenerateDebugInformation>true</GenerateDebugInformation>
+      <EnableUAC>false</EnableUAC>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
+      <WarningLevel>Level3</WarningLevel>
+      <FunctionLevelLinking>true</FunctionLevelLinking>
+      <IntrinsicFunctions>true</IntrinsicFunctions>
+      <SDLCheck>true</SDLCheck>
+      <PreprocessorDefinitions>AUDIOASIOUNMANAGED_EXPORTS;NDEBUG;AUDIOASIOUNMANAGED_EXPORTS;_WINDOWS;_USRDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <ConformanceMode>true</ConformanceMode>
       <PrecompiledHeader>Use</PrecompiledHeader>
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <WarningLevel>Level3</WarningLevel>
-      <PreprocessorDefinitions>NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>ole32.lib</AdditionalDependencies>
+      <SubSystem>Windows</SubSystem>
+      <EnableCOMDATFolding>true</EnableCOMDATFolding>
+      <OptimizeReferences>true</OptimizeReferences>
+      <GenerateDebugInformation>true</GenerateDebugInformation>
+      <EnableUAC>false</EnableUAC>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="AudioClient.h" />
-    <ClInclude Include="CaptureClient.h" />
-    <ClInclude Include="Device.h" />
-    <ClInclude Include="DeviceEnumerator.h" />
-    <ClInclude Include="GuidConversion.h" />
+    <ClInclude Include="AsioCore.h" />
+    <ClInclude Include="AsioCoreCallbacks.h" />
+    <ClInclude Include="AsioCoreException.h" />
+    <ClInclude Include="AsioDebugDriver.h" />
+    <ClInclude Include="AsioDebugDriverGuid.h" />
+    <ClInclude Include="AsioError.h" />
+    <ClInclude Include="Audio.Asio.Unmanaged.h" />
+    <ClInclude Include="DriverDescription.h" />
+    <ClInclude Include="framework.h" />
+    <ClInclude Include="InputFloat32Channel.h" />
+    <ClInclude Include="InputInt24Channel.h" />
+    <ClInclude Include="InputInt32Channel.h" />
+    <ClInclude Include="OutputFloat32ChannelPair.h" />
+    <ClInclude Include="OutputInt24ChannelPair.h" />
+    <ClInclude Include="OutputInt32ChannelPair.h" />
     <ClInclude Include="pch.h" />
-    <ClInclude Include="Resource.h" />
-    <ClInclude Include="WasapiCoreException.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="AssemblyInfo.cpp" />
-    <ClCompile Include="AudioClient.cpp" />
-    <ClCompile Include="CaptureClient.cpp" />
-    <ClCompile Include="Device.cpp" />
-    <ClCompile Include="DeviceEnumerator.cpp" />
-    <ClCompile Include="GuidConversion.cpp" />
+    <ClCompile Include="AsioCore.cpp" />
+    <ClCompile Include="AsioCoreCallbacks.cpp" />
+    <ClCompile Include="AsioCoreException.cpp" />
+    <ClCompile Include="AsioDebugDriver.cpp" />
+    <ClCompile Include="dllmain.cpp" />
+    <ClCompile Include="DriverDescription.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="WasapiCoreException.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Audio.Foundation.Unmanaged\Audio.Foundation.Unmanaged.vcxproj">
+      <Project>{c4d38b7d-afa0-4138-bc06-ecb238fe579b}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
