--- a/Audio.Asio/Audio.Asio.vcxproj
+++ b/Audio.Asio/Audio.Asio.vcxproj
@@ -1,17 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
-    <ProjectConfiguration Include="Debug|Win32">
-      <Configuration>Debug</Configuration>
-      <Platform>Win32</Platform>
-    </ProjectConfiguration>
     <ProjectConfiguration Include="Debug|x64">
       <Configuration>Debug</Configuration>
       <Platform>x64</Platform>
-    </ProjectConfiguration>
-    <ProjectConfiguration Include="Release|Win32">
-      <Configuration>Release</Configuration>
-      <Platform>Win32</Platform>
     </ProjectConfiguration>
     <ProjectConfiguration Include="Release|x64">
       <Configuration>Release</Configuration>
@@ -34,21 +26,7 @@
     <CLRSupport>NetCore</CLRSupport>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
-    <ConfigurationType>DynamicLibrary</ConfigurationType>
-    <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v143</PlatformToolset>
-    <CLRSupport>NetCore</CLRSupport>
-    <CharacterSet>Unicode</CharacterSet>
-  </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
-    <ConfigurationType>DynamicLibrary</ConfigurationType>
-    <UseDebugLibraries>false</UseDebugLibraries>
-    <PlatformToolset>v143</PlatformToolset>
-    <CLRSupport>NetCore</CLRSupport>
-    <CharacterSet>Unicode</CharacterSet>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
@@ -63,39 +41,23 @@
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
-  <ImportGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="PropertySheets">
-    <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
-  </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
-  </ImportGroup>
-  <ImportGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="PropertySheets">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ExecutablePath>$(ExecutablePath)</ExecutablePath>
-    <IncludePath>D:\Gamer I5\Documents\Projects\Audio\Audio.Foundation.Unmanaged;D:\Gamer I5\Documents\Projects\ASIOSDK2\common;$(IncludePath)</IncludePath>
+    <IncludePath>$(IncludePath)</IncludePath>
     <OutDir>$(ProjectDir)bin\$(Configuration)\$(Platform)\</OutDir>
     <IntDir>$(ProjectDir)obj\$(Configuration)\$(Platform)\</IntDir>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <ExecutablePath>$(ExecutablePath)</ExecutablePath>
-    <IncludePath>D:\Gamer I5\Documents\Projects\Audio\Audio.Foundation.Unmanaged;D:\Gamer I5\Documents\Projects\ASIOSDK2\common;$(IncludePath)</IncludePath>
-    <OutDir>$(ProjectDir)bin\$(Configuration)\$(Platform)\</OutDir>
-    <IntDir>$(ProjectDir)obj\$(Configuration)\$(Platform)\</IntDir>
+    <ExternalIncludePath>D:\Gamer I5\Documents\Projects\ASIOSDK2\common;D:\Gamer I5\Documents\Projects\Audio\Audio.Asio.Unmanaged;$(ExternalIncludePath)</ExternalIncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ExecutablePath>$(ExecutablePath)</ExecutablePath>
-    <IncludePath>D:\Gamer I5\Documents\Projects\Audio\Audio.Foundation.Unmanaged;D:\Gamer I5\Documents\Projects\ASIOSDK2\common;$(IncludePath)</IncludePath>
+    <IncludePath>$(IncludePath)</IncludePath>
     <OutDir>$(ProjectDir)bin\$(Configuration)\$(Platform)\</OutDir>
     <IntDir>$(ProjectDir)obj\$(Configuration)\$(Platform)\</IntDir>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <ExecutablePath>$(ExecutablePath)</ExecutablePath>
-    <IncludePath>D:\Gamer I5\Documents\Projects\Audio\Audio.Foundation.Unmanaged;D:\Gamer I5\Documents\Projects\ASIOSDK2\common;$(IncludePath)</IncludePath>
-    <OutDir>$(ProjectDir)bin\$(Configuration)\$(Platform)\</OutDir>
-    <IntDir>$(ProjectDir)obj\$(Configuration)\$(Platform)\</IntDir>
+    <ExternalIncludePath>D:\Gamer I5\Documents\Projects\ASIOSDK2\common;D:\Gamer I5\Documents\Projects\Audio\Audio.Asio.Unmanaged;$(ExternalIncludePath)</ExternalIncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -109,23 +71,7 @@
     </ClCompile>
     <Link>
       <AdditionalDependencies>ole32.lib</AdditionalDependencies>
-    </Link>
-    <Xdcmake>
-      <SuppressStartupBanner>false</SuppressStartupBanner>
-    </Xdcmake>
-  </ItemDefinitionGroup>
-  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <ClCompile>
-      <PrecompiledHeader>Use</PrecompiledHeader>
-      <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <WarningLevel>Level3</WarningLevel>
-      <PreprocessorDefinitions>_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <ShowIncludes>false</ShowIncludes>
-      <AdditionalUsingDirectories>$(ProjectDir)..\Audio.Foundation\bin\$(Configuration)\$(Platform)</AdditionalUsingDirectories>
-      <AdditionalIncludeDirectories>$(ProjectDir)..\Audio.Foundation.Unmanaged\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-    </ClCompile>
-    <Link>
-      <AdditionalDependencies>ole32.lib</AdditionalDependencies>
+      <AdditionalLibraryDirectories>D:\Gamer I5\Documents\Projects\Audio\Audio.Asio.Unmanaged\bin\$(Configuration)\$(PlatformTarget)\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <Xdcmake>
       <SuppressStartupBanner>false</SuppressStartupBanner>
@@ -142,65 +88,33 @@
     </ClCompile>
     <Link>
       <AdditionalDependencies>ole32.lib</AdditionalDependencies>
-    </Link>
-    <Xdcmake>
-      <SuppressStartupBanner>false</SuppressStartupBanner>
-    </Xdcmake>
-  </ItemDefinitionGroup>
-  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <ClCompile>
-      <PrecompiledHeader>Use</PrecompiledHeader>
-      <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
-      <WarningLevel>Level3</WarningLevel>
-      <PreprocessorDefinitions>NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <ShowIncludes>false</ShowIncludes>
-      <AdditionalUsingDirectories>$(ProjectDir)..\Audio.Foundation\bin\$(Configuration)\$(Platform)</AdditionalUsingDirectories>
-    </ClCompile>
-    <Link>
-      <AdditionalDependencies>ole32.lib</AdditionalDependencies>
+      <AdditionalLibraryDirectories>D:\Gamer I5\Documents\Projects\Audio\Audio.Asio.Unmanaged\bin\$(Configuration)\$(PlatformTarget)\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <Xdcmake>
       <SuppressStartupBanner>false</SuppressStartupBanner>
     </Xdcmake>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="AsioCore.h" />
-    <ClInclude Include="AsioCoreCallbacks.h" />
-    <ClInclude Include="AsioCoreException.h" />
-    <ClInclude Include="AsioDebugDriver.h" />
-    <ClInclude Include="AsioDebugDriverGuid.h" />
     <ClInclude Include="AsioDevice.h" />
     <ClInclude Include="AsioDeviceCollection.h" />
-    <ClInclude Include="AsioError.h" />
     <ClInclude Include="AsioInteropException.h" />
     <ClInclude Include="AsioRouter.h" />
     <ClInclude Include="AudioInput.h" />
     <ClInclude Include="AudioInputCollection.h" />
     <ClInclude Include="AudioOutput.h" />
     <ClInclude Include="AudioOutputCollection.h" />
-    <ClCompile Include="AsioCoreCallbacks.cpp" />
     <ClCompile Include="AsioRouter.cpp" />
     <ClInclude Include="AudioTrack.h" />
     <ClInclude Include="AudioTrackCollection.h" />
     <ClInclude Include="BufferSwitchManagedCallback.h" />
     <ClInclude Include="ChannelNameEnumerable.h" />
     <ClInclude Include="ChannelNameEnumerator.h" />
-    <ClInclude Include="DriverDescription.h" />
     <ClInclude Include="DriverRegistry.h" />
-    <ClInclude Include="InputFloat32Channel.h" />
-    <ClInclude Include="InputInt24Channel.h" />
-    <ClInclude Include="InputInt32Channel.h" />
-    <ClInclude Include="OutputFloat32ChannelPair.h" />
-    <ClInclude Include="OutputInt24ChannelPair.h" />
-    <ClInclude Include="OutputInt32ChannelPair.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="TapeMachine.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="AsioCore.cpp" />
-    <ClCompile Include="AsioCoreException.cpp" />
-    <ClCompile Include="AsioDebugDriver.cpp" />
     <ClCompile Include="AsioDevice.cpp" />
     <ClCompile Include="AsioInteropException.cpp" />
     <ClCompile Include="AssemblyInfo.cpp" />
@@ -210,20 +124,15 @@
     <ClCompile Include="AudioTrackCollection.cpp" />
     <ClCompile Include="ChannelNameEnumerable.cpp" />
     <ClCompile Include="ChannelNameEnumerator.cpp" />
-    <ClCompile Include="DriverDescription.cpp" />
     <ClCompile Include="DriverRegistry.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="TapeMachine.cpp" />
     <ClCompile Include="UsefullStuff.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -233,6 +142,9 @@
     <Image Include="app.ico" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Audio.Asio.Unmanaged\Audio.Asio.Unmanaged.vcxproj">
+      <Project>{47dbe2cb-65c6-48d1-b93e-2b33fecc5c43}</Project>
+    </ProjectReference>
     <ProjectReference Include="..\Audio.Foundation.Unmanaged\Audio.Foundation.Unmanaged.vcxproj">
       <Project>{c4d38b7d-afa0-4138-bc06-ecb238fe579b}</Project>
     </ProjectReference>
@@ -240,6 +152,17 @@
       <Project>{33764059-8096-43a3-b973-866f941fd5f3}</Project>
     </ProjectReference>
   </ItemGroup>
+  <Target Name="CopyDependencies" AfterTargets="Build" Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
+    <Message Text="Copy dependencies to $(OutDir)" Importance="high" />
+    <ItemGroup>
+      <Dependencies Include="..\Audio.Asio.Unmanaged\bin\$(Configuration)\$(PlatformTarget)\Audio.Asio.Unmanaged.dll" />
+      <Dependencies Include="..\Audio.Asio.Unmanaged\bin\$(Configuration)\$(PlatformTarget)\Audio.Asio.Unmanaged.pdb" />
+      <Dependencies Include="..\Audio.Foundation.Unmanaged\bin\$(Configuration)\$(PlatformTarget)\Audio.Foundation.Unmanaged.dll" />
+      <Dependencies Include="..\Audio.Foundation.Unmanaged\bin\$(Configuration)\$(PlatformTarget)\Audio.Foundation.Unmanaged.pdb" />
+    </ItemGroup>
+    <Copy SourceFiles="@(Dependencies)" DestinationFolder="$(OutDir)" />
+  </Target>
+
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
