--- a/Test/Test.Audio.Asio/Test.Audio.Asio.csproj
+++ b/Test/Test.Audio.Asio/Test.Audio.Asio.csproj
@@ -6,7 +6,7 @@
 
 		<IsPackable>false</IsPackable>
 
-		<Platforms>AnyCPU</Platforms>
+		<Platforms>x64</Platforms>
 	</PropertyGroup>
 
 	<ItemGroup>
