add FileWriter as ISampleReceiver including ObjectFactory method

--- a/Audio.Foundation.Unmanaged/Audio.Foundation.Unmanaged.vcxproj.filters
+++ b/Audio.Foundation.Unmanaged/Audio.Foundation.Unmanaged.vcxproj.filters
@@ -81,6 +81,12 @@
     <ClInclude Include="IMeterChannel.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="StreamWriter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="FileWriter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -108,6 +114,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="SampleContainerBase.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="StreamWriter.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="FileWriter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
